--- a/_config.yml
+++ b/_config.yml
@@ -27,10 +27,10 @@ baseurl: ""
 
 # Website Header, Description, Footer year and text. 
 # If you are deleting this, make sure you remove it from HTML files too 
-heading: Jekyll Garden # Change this 
-content: Obsidian ready Jekyll Theme
+heading: D207 Lore # Change this 
+content: Lore wiki for Detachment 207
 copyright:  
-  year: © 2022
+  year: © 2024
   msg: Contents under CC-BY-NC 
 
 # Set title and content for private & broken link tooltop
@@ -52,7 +52,7 @@ preferences:
 # To enable a homepage, change the value to true and add content to _includes/Homepage.html
 # If enable : false, notes feed will be as homepage. 
   homepage: 
-    enabled: false ##If you need a homepage, change this to true and edit _includes/Homepage.html
+    enabled: true ##If you need a homepage, change this to true and edit _includes/Homepage.html
 
 encoding: utf-8
 
